--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-to-print": "^2.14.15",
+    "sass": "^1.71.1",
     "unsplash-js": "^7.0.18",
     "zod": "^3.22.2"
   },
