--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "@prisma/client": "^5.4.2",
     "axios": "^1.5.1",
     "html2canvas": "^1.4.1",
